--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "type": "module",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "build": "cd fitfusion-frontend && npm install && npm run build",
+    "install-frontend": "cd fitfusion-frontend && npm install"
   },
   "keywords": [
     "fitness",
